create landing page and navbar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "files.eol": "\n",
     "editor.tabSize": 2,
     "cSpell.words": [
+        "appbar",
         "Formik",
         "JWTKEY",
         "nestjs",
