create text editor and handle add blogs request

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,10 @@
     "editor.tabSize": 2,
     "cSpell.words": [
         "appbar",
+        "dompurify",
         "Formik",
         "JWTKEY",
+        "katex",
         "nestjs",
         "signin",
         "signup",
