--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "universal-cookie": "^4.0.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "eslint": "^7.32.0",
